# bevy-dlc

./: .gitignore  Cargo.toml  Criterion.toml  PLAN.md  README.md
assets/: dlcA.dlcpack  expansionA.dlcpack  test.txt
assets/dlcA/: blue.cur  blue.cur.license.txt  test.json
benches/: dlc_bench.rs
bevy_dlc_macro/: Cargo.toml
bevy_dlc_macro/src/: lib.rs
example_keys/: example.pubkey  example.slicense
examples/: dlc_spawn.rs  key_to_token.rs  mod.rs  real.rs  seed_to_token.rs  spawn.rs
examples/bevy_common_assets/: main.rs
examples/bevy_cursor_kit/: main.rs
examples/real/: main.rs
reports/criterion/: index.html
reports/criterion/reports/decrypt/: index.html
reports/criterion/reports/decrypt/decrypt_all/: history.html  index.html
reports/criterion/reports/pack_100_files/: history.html  index.html
reports/criterion/reports/parse_100_files/: history.html  index.html
src/: asset_loader.rs  content_key_registry.rs  encrypt_key_registry.rs  example_util.rs  ext.rs  lib.rs  macros.rs  main.rs  pack_format.rs  repl.rs  watch.rs
src/steamworks/: mod.rs
tests/: bevy_common_assets.rs  cli_integration.rs  dlc_pack.rs  load_expansion_pack_image.rs  steamworks.rs  watch_cli.rs
tests/common/: app.rs  mod.rs
