[package]
name = "bevy-dlc"
version = "2.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Kirk <github.com/captkirk88>"]
description = "DLC (downloadable content) management for Bevy games"
license = "MIT"
readme = "README.md"
repository = "https://github.com/captkirk88/bevy-dlc"
categories = ["game-development"]
keywords = ["bevy", "dlc"]
exclude = ["tests/**", "examples/**", "benches/**", "assets/**", "PLAN.md"]

[features]
default = []
common_json = ["bevy_common_assets/json"]
common_yaml = ["bevy_common_assets/yaml"]
common_xml = ["bevy_common_assets/xml"]
common_toml = ["bevy_common_assets/toml"]
common_ron = ["bevy_common_assets/ron"]
common_msgpack = ["bevy_common_assets/msgpack"]
common_postcard = ["bevy_common_assets/postcard"]
common_csv = ["bevy_common_assets/csv"]
common_cbor = ["bevy_common_assets/cbor"]

[dependencies]
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22" }
thiserror = "2"
rand = "0.10"
aes-gcm = "0.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
flate2 = "1.1"
tar = "0.4"
dashmap = "6"
once_cell = "1.21"
zeroize = "1.8"
ring = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
secure-gate = { version = "0.7.0-rc.14", features = ["secure", "rand", "cloneable", "ct-eq"] }
byte-aes = "0.2.2"
rayon = "1.11"
owo-colors = "4"

# Optional dependencies for features
bevy_common_assets = { version = "0.15.0", optional = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.6"
secure = { version = "0.3" }
serial_test = "3"


[profile.release]
opt-level = "z"
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = 'abort'

[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
codegen-units = 1

[[example]]
name = "real"
path = "examples/real/main.rs"
