[package]
name = "bevy-dlc"
version = "1.18.13"
edition = "2024"
rust-version = "1.93"
authors = ["Kirk <github.com/captkirk88>"]
description = "DLC (downloadable content) management for Bevy games"
license = "MIT"
readme = "README.md"
repository = "https://github.com/captkirk88/bevy-dlc"
categories = ["game-development"]
keywords = ["bevy", "dlc"]
exclude = ["/tests/**", "/examples/**", "/example_keys/**", "/benches/**", "/assets/**", "/scripts/**", "**/*.md", "*.png", "/reports/"]

[features]
default = []

[dependencies]
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22" }
thiserror = "2"
rand = "0.10"
aes-gcm = "0.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
flate2 = "1.1"
tar = "0.4"
dashmap = "6.1"
zeroize = "1.8"
ring = "0.17"
secure-gate = { version = "0.7.0-rc.14", features = ["secure", "rand", "cloneable", "ct-eq"] }
byte-aes = "0.2"
owo-colors = "4.3"
infer = "0.19"
crc32fast = "1.5"
futures-lite = "2.6"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
secure = { version = "0.3" }
serial_test = "3.4"
bevy_common_assets = { version = "0.15.0", features = ["json"] }
bevy_cursor_kit = { version = "0.8.0", features = ["serde"] }
tempfile = "3.26"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.dev]
incremental = false

[profile.dev.package."*"]
incremental = false

[profile.release]
opt-level = "z"
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = 'abort'

[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
codegen-units = 1

[[bench]]
name = "dlc_bench"
harness = false