[package]
name = "bevy_dlc_macro"
version = "1.0.0"
edition = "2024"
publish = true
authors = ["Kirk <github.com/captkirk88>"]
description = "Procedural macros for bevy-dlc"
license = "MIT"
categories = ["game-development"]
keywords = ["bevy", "dlc"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
secure = { version = "0.3" }
